--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,3 +1,5 @@
+@import './color.scss';
+
 // layout
 .inner {
   max-width: 992px;
@@ -18,4 +20,9 @@
 .flex-center {
   @extend .flex-box;
   justify-content: center;
+}
+
+.box-shadow {
+  border-radius: 15px;
+  box-shadow: 0 0 15px rgba($color: $black, $alpha: .2);
 }
