--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,11 +2,7 @@
 <article class="users-edit inner">
   <h1>プロフィール編集</h1>
   <div class="users-edit__img">
-    <% if @user.avatar? %>
-      <%= image_tag @user.avatar.url, style: 'width: 200px;' %>
-    <% else %>
-      <%= image_tag ("sample_user"), style: 'width: 200px;' %>
-    <% end %>
+    <%= image_tag @user.avatar.url, class: 'avatar' %>
   </div>
 
   <%= form_with(model: @user, local: true) do |f| %>
