--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,4 @@
 <%= form_with(model: current_user.active_relationships.find_by(followed_id: @user.id),
               html: { method: :delete }, remote: true) do |f| %>
-  <%= f.submit "フォロー解除" %>
+  <%= f.submit "フォロー解除", class: 'btn-blue', data: { confirm: "フォロー解除しますか？" } %>
 <% end %>
