--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -25,9 +25,12 @@
     }
 
     &__img {
+      display: flex;
+      align-items: center;
       margin-right: 4%;
 
       img {
+        width: 120px;
         border-radius: 50%;
       }
     }
@@ -97,8 +100,6 @@
       img {
         width: 120px;
         height: 120px;
-        border-radius: 50%;
-        aspect-ratio: 1 / 1;
       }
     }
 
