--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -5,23 +5,25 @@
   <h4 class="sub-title">やりとり中</h4>
   <ul>
     <% @another_rooms.each do |room| %>
-      <% @user = room.user %>
-      <li class="users-item chats-item">
-        <%= link_to chat_path(@user.id), class: 'users-item__wrap' do %>
-          <div class="chats-item__img">
-            <%= image_tag @user.avatar.url, class: 'avatar' %>
-          </div>
-          <div class="chats-item__detail">
-            <div class="users-item__name chats-item__name">
-              <i class="fas fa-user <%= @user.gender == '男' ? 'man_icon' : 'woman_icon' %>"></i>
-              <h2><%= @user.name %></h2>
+      <% if Chat.find_by(id: room.room.chat_ids) %>
+        <% @user = room.user %>
+        <li class="users-item chats-item">
+          <%= link_to chat_path(@user.id), class: 'users-item__wrap' do %>
+            <div class="chats-item__img">
+              <%= image_tag @user.avatar.url, class: 'avatar' %>
             </div>
-            <p class="chats-item__message">
-              <%= Chat.find_by(id: room.room.chat_ids.last).message %>
-            </p>
-          </div>
-        <% end %>
-      </li>
+            <div class="chats-item__detail">
+              <div class="users-item__name chats-item__name">
+                <i class="fas fa-user <%= @user.gender == '男' ? 'man_icon' : 'woman_icon' %>"></i>
+                <h2><%= @user.name %></h2>
+              </div>
+              <p class="chats-item__message">
+                <%= Chat.find_by(id: room.room.chat_ids.last).message %>
+              </p>
+            </div>
+          <% end %>
+        </li>
+      <% end %>
     <% end %>
   </ul>
 </article>
