--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -6,7 +6,7 @@
     <div class="users-item__intro">
       <%# <div class="users-item__top"> %>
         <div class="users-item__name">
-          <i class="fas fa-user <%= user.gender == '男' ? 'man_icon' : 'woman_icon' %>"></i>
+          <i class="fas fa-user <%= user.gender == '男性' ? 'man_icon' : 'woman_icon' %>"></i>
           <h2><%= user.name %></h2>
         </div>
         <div class="users-item__detail">
