--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -5,22 +5,16 @@
   <h4 class="sub-title">条件設定</h4>
 
   <div class="search-form">
-    <%= search_form_for @q, url: search_users_path do |f| %>
-      <dl>
-        <dt><%= f.label :address_eq, "居住地" %></dt>
-        <dd><%= f.select :address_eq, User.addresses.keys %></dd>
-      </dl>
-      <dl>
-        <dt><%= f.label :gender_eq, "性別" %></dt>
-        <dd><%= f.select :gender_eq, User.genders.keys %></dd>
-      </dl>
-      <%= f.submit "この条件で検索", class: 'btn-blue' %>
-    <% end %>
+    <%= render 'search' %>
   </div>
 
   <ul>
-    <% @searchResults.each do |user| %>
-      <%= render user %>
+    <% if @users.present? %>
+      <% @users.each do |user| %>
+        <%= render user %>
+      <% end %>
+    <% else %>
+      <p>検索結果はありません</p>
     <% end %>
   </ul>
 </article>
