fix: add like count when push like button

--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,13 +1,21 @@
-<% if @user.liked_by?(@user) %>
-  <%= link_to destroy_like_path(), method: :delete, local: false do %>
+<% if current_user?(@user) %>
+  <p>
     <i class="fas fa-thumbs-up"></i>
     <%= @likes_count %>
     <span>いいね！</span>
-  <% end %>
+  </p>
 <% else %>
-  <%= link_to create_like_path(), method: :post, local: false do %>
-    <i class="far fa-thumbs-up"></i>
-    <%= @likes_count %>
-    <span>いいね！</span>
+  <% if @user.liked_by?(current_user) %>
+    <%= link_to destroy_like_path(), method: :delete, local: false do %>
+      <i class="fas fa-thumbs-up"></i>
+      <%= @likes_count %>
+      <span>いいね！</span>
+    <% end %>
+  <% else %>
+    <%= link_to create_like_path(), method: :post, local: false do %>
+      <i class="far fa-thumbs-up"></i>
+      <%= @likes_count %>
+      <span>いいね！</span>
+    <% end %>
   <% end %>
 <% end %>
