--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <ul>
-    <% @users.each do |user| %>
+    <% @user.each do |user| %>
       <%= render user %>
     <% end %>
   </ul>
