fix: display users-index fav

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -12,8 +12,8 @@
         <p><%= user.age %>歳</p>
         <p><%= user.address %></p>
         <p>
-          <i class="far fa-thumbs-up"></i>
-          2,000いいね！
+          <i class="fas fa-thumbs-up"></i>
+          <%= user.likes.count %>いいね！
         </p>
       </div>
       <div class="users-item__under">
