add: add Users model test

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,12 +12,10 @@
     <dl>
       <dt><%= f.label :gender, "性別" %></dt>
       <dd>
-        <%= f.radio_button :gender, :man %>
+        <%= f.radio_button :gender, :男性 %>
         <%= f.label :man, "男性" %>
-        <%= f.radio_button :gender, :woman  %>
+        <%= f.radio_button :gender, :女性  %>
         <%= f.label :woman, "女性" %>
-        <%= f.radio_button :gender, :others  %>
-        <%= f.label :others, "その他" %>
       </dd>
     </dl>
     <dl>
