--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,11 @@
 <footer class="footer <%= logged_in? ? "footer-login" : "footer-home" %>">
-  <%= link_to "Workouter", root_path, class: 'footer-logo' %>
+  <div class="footer-left">
+    <%= link_to "Workouter", root_path, class: 'footer-logo' %>
+    <div class="footer-map">
+      <p>本社所在地： 〒100-0005 東京都千代田区丸の内１丁目</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.8280303808788!2d139.76493611525882!3d35.68123618019432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bfbd89f700b%3A0x277c49ba34ed38!2z5p2x5Lqs6aeF!5e0!3m2!1sja!2sjp!4v1655114325435!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
   <% if logged_in? %>
     <ul>
       <li><%= link_to "ユーザーを探す", users_path %></li>
