fix: fix flash messages designs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -168,6 +168,28 @@ article{
   object-fit: cover;
 }
 
+.alert {
+  position: fixed;
+  top: 64px;
+  width: 100%;
+  padding: 8px 0;
+
+  color: $white;
+  text-align: center;
+
+  &-success {
+    background-color: rgba($color: $green, $alpha: 0.7);
+  }
+
+  &-danger {
+    background-color: rgba($color: $red, $alpha: 0.7)
+  }
+
+  &-warning {
+    background-color: rgba($color: $yellow, $alpha: 0.7)
+  }
+}
+
 // header
 .header {
   @extend .flex-box;
