--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -269,3 +269,25 @@ article{
     }
   }
 }
+
+// form
+.sign-up,
+.login,
+.users,
+.users-show,
+.users-edit,
+.password-reset {
+  input[type=text],
+  input[type=password] {
+    width: 300px;
+  }
+  dl {
+    @extend .flex-box;
+    margin-bottom: 24px;
+
+    dt {
+      width: 150px;
+      color: $gray;
+    }
+  }
+}
